# ddt-iptv-fastapi

./: alembic.ini  pyproject.toml  requirements.txt
iptv/: db.py  main.py  test_main.py
iptv/db/: tables.py
iptv/shows/: main.py  schemas.py  tables.py
iptv/users/: hashing.py  main.py  schemas.py  tables.py  utils.py
iptv/users/routers/: __init__.py  token_auth.py  users.py
migrations/: env.py
migrations/versions/: 4d0d99d590b6_create_table_shows.py  d6ba3929f752_create_authtoken_table.py  faaa9118a00d_create_users_table.py
tests/: test_iptv.py
