[tool.poetry]
name = "iptv"
version = "0.1.0"
description = ""
authors = ["Ulukman Amangeldiev <ulukmanatageldiuulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
requests = "^2.25.1"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
asyncpg = "^0.23.0"
aiosqlite = "^0.17.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = 'env/'
line_length = 79

[tool.isort]
line_length = 79
skip_gitignore = true

